--- a/PostcodeAPI/serverless.template
+++ b/PostcodeAPI/serverless.template
@@ -8,7 +8,7 @@
     "AspNetCoreFunction": {
       "Type": "AWS::Serverless::Function",
       "Properties": {
-        "Handler": "PostcodeAPI::PostcodeAPI.LambdaEntryPoint::FunctionHandlerAsync",
+        "Handler": "Postcode.API::Postcode.API.LambdaEntryPoint::FunctionHandlerAsync",
         "FunctionName" : "PostcodeAPI",
         "Runtime": "dotnetcore3.1",
         "CodeUri": "",
