Added Microsoft Extensions Logging

--- a/PostcodeAPI/appsettings.json
+++ b/PostcodeAPI/appsettings.json
@@ -6,6 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+
+  "Logger": {
+    "IsEnabled": true,
+    "Name": "PostcodeAPI",
+    "DateTimeFormat": "yyyy-MM-dd HH:mm:ss"
+  },
+    
+  }
 
