--- a/Postcode/Postcode.csproj
+++ b/Postcode/Postcode.csproj
@@ -11,6 +11,7 @@
     <None Remove="Flurl.Http" />
     <None Remove="Models\" />
     <None Remove="Microsoft.CSharp" />
+    <None Remove="AWSSDK.SecretsManager" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Contracts\" />
@@ -20,5 +21,6 @@
   <ItemGroup>
     <PackageReference Include="Flurl.Http" Version="3.2.4" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.101.7" />
   </ItemGroup>
 </Project>
